add crud category and user