@@ -1,6 +1,7 @@
 package com.example.demo.controller;
 
 import com.example.demo.dtos.CategoryDTO;
+import com.example.demo.entity.Category;
 import com.example.demo.services.category.impl.CategoryService;
 import jakarta.validation.Valid;
 import lombok.RequiredArgsConstructor;
@@ -19,11 +20,14 @@ import java.util.stream.Collectors;
 public class CategoryController {
     private final CategoryService categoryService;
     @GetMapping("")
-    public ResponseEntity<String> getAllCategories(
+    public ResponseEntity<List<Category>> getAllCategories(
             @RequestParam("page") int page,
             @RequestParam("limit") int limit
     ){
-        return ResponseEntity.ok(String.format("getAllCategories, page = %d, limit = %d",page, limit));
+//        categoryService.getAllCategory();
+        List<Category> categories = categoryService.getAllCategory();
+//        return ResponseEntity.ok(String.format("getAllCategories, page = %d, limit = %d",page, limit));
+        return ResponseEntity.ok(categories);
     }
     @PostMapping("")
     public ResponseEntity<?> createCategory(
@@ -32,11 +36,29 @@ public class CategoryController {
     ){
         if(result.hasErrors()){
             List<String> errorMessages = result.getFieldErrors()
-                    .stream().map(FieldError::getDefaultMessage).toList();
+                    .stream().map(error -> error.getField() + ": " + error.getDefaultMessage())
+                    .collect(Collectors.toList());
             return ResponseEntity.badRequest().body(errorMessages);
         }
-        categoryService.createCategory(categoryDTO);
-        return ResponseEntity.ok("This is insertCategory"+categoryDTO);
+        Category createdCategory = categoryService.createCategory(categoryDTO);
+        return ResponseEntity.status(HttpStatus.CREATED).body(createdCategory);
+    }
+    @GetMapping("/{id}")
+    public ResponseEntity<Category> getCategoryById(@PathVariable("id") long id) {
+        Category category = categoryService.getCategoryById(id);
+        return ResponseEntity.ok(category);
+    }
+
+    @PutMapping("/{id}")
+    public ResponseEntity<Category> updateCategory(@PathVariable("id") long id, @RequestBody CategoryDTO categoryDTO) {
+        Category updatedCategory = categoryService.updateCategory(id, categoryDTO);
+        return ResponseEntity.ok(updatedCategory);
+    }
+
+    @DeleteMapping("/{id}")
+    public ResponseEntity<Void> deleteCategory(@PathVariable("id") long id) {
+        categoryService.deleteCategory(id);
+        return ResponseEntity.noContent().build();
     }
 
 
